manifests/web-cluster/sdlc/helium/solana-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solana-monitor
  name: solana-monitor
  namespace: helium
spec:
  selector:
    matchLabels:
      app: solana-monitor
  replicas: 1
  template:
    metadata:
      labels:
        app: solana-monitor
        security-group: public-rds-access
    spec:
      serviceAccountName: public-monitoring-rds-monitoring-user-access
      containers:
        - name: solana-monitor
          image: public.ecr.aws/v0j6k5v6/solana-monitor:0.1.19
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8082
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: solana-monitor
  namespace: helium
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8082"
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: http
  selector:
    app: solana-monitor
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solana-monitor
  namespace: helium
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  rules:
    - host: solana-monitor.web.test-helium.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solana-monitor
                port:
                  number: 8082
